--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">NearMe</string>
+    <string-array name="navigation_drawer_items_array">
+        <item>My Profile</item>
+        <item>Hire People</item>
+        <item>Look For Work</item>
+
+    </string-array>
 </resources>
